# Perception-Coding-Challenge-WA

./: .gitignore  CMakeLists.txt  CMakePresets.json  HACKING.md  README.md  run.sh
cmake/: dev-mode.cmake  install-rules.cmake  variables.cmake
source/: lib.cpp  main.cpp
test/: CMakeLists.txt
test/source/: perception_test.cpp
